@@ -1,4 +1,5 @@
 0.11
+ - Improve LICENSE AND COPYRIGHT section in doc.
  - Update Module::Install to 1.21 version.
 
 0.10 2020-01-12T00:11:37+01:00
